Updates from Sofuto Computer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,8 @@
 
   <div class="comp">
     <a routerLink="/classic">Classic</a>
-    <a routerLink="/snapbackit">Snapbacks</a>
-    <a routerLink="/truckerit">Truckers</a>
-  </div>
-
-  <div class="buy">
-    Buy
+    <a routerLink="/snapback">Snapbacks</a>
+    <a routerLink="/truck">Truckers</a>
   </div>
 </nav>
 
