--- a/src/app/snapbackit/snapbackit.component.html
+++ b/src/app/snapbackit/snapbackit.component.html
@@ -1,26 +1,44 @@
 <div class="main">
     <div class="breadcrumb">
-        <a routerLink="/home">← Bosh sahifa</a>
+        <a routerLink="/">← Bosh sahifa</a>
     </div>
 
-    <h1 style="text-align: left; margin-left: 52px; margin-bottom: 32px;color: #1a1a80">Snapback kepkalar</h1>
+    <h1 style="text-align: left; margin-left: 52px; margin-bottom: 32px; color: #1a1a80">
+        Snapback kepkalar
+    </h1>
 
     <div class="filter-controls">
         <div class="input-group">
             <label for="min-price">Min narx</label>
-            <input type="number" id="min-price" [(ngModel)]="minPrice" placeholder="Masalan: 0" />
+            <input type="number" id="min-price" [(ngModel)]="minPrice" placeholder="Masalan: 0"
+                (input)="onFilterChange()" />
         </div>
         <div class="input-group">
             <label for="max-price">Max narx</label>
-            <input type="number" id="max-price" [(ngModel)]="maxPrice" placeholder="Masalan: 9999" />
+            <input type="number" id="max-price" [(ngModel)]="maxPrice" placeholder="Masalan: 9999"
+                (input)="onFilterChange()" />
         </div>
+        <button class="reset-btn" (click)="resetFilters()">Filterni tozalash</button>
     </div>
+
+    <div class="results-info">
+        <p>Jami {{ filteredProducts.length }} ta mahsulot topildi</p>
+    </div>
+
     <div class="products">
-        <div class="product-card" *ngFor="let item of allProducts">
+        <div class="product-card" *ngFor="let item of filteredProducts" (click)="goToProductDetail(item.name)">
             <img [src]="item.img" [alt]="item.name" />
             <h4 class="name">{{ item.name }}</h4>
-            <h4 class="price">{{ item.price | currency:'USD'}}</h4>
-            <button class="buy-btn">Harid qilish</button>
+            <h4 class="price">{{ item.price | currency:'USD' }}</h4>
+            <button class="buy-btn" (click)="buyProduct($event, item)">
+                Harid qilish
+            </button>
         </div>
+    </div>
+
+    <div *ngIf="filteredProducts.length === 0" class="no-products">
+        <h3>Hech qanday mahsulot topilmadi</h3>
+        <p>Filter sozlamalarini o'zgartirib ko'ring</p>
+        <button (click)="resetFilters()">Barcha mahsulotlarni ko'rish</button>
     </div>
 </div>
