--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="hero-section">
         <h1 class="main-title">
-            Bizning onlayn do'konimizdan yuqori sifatli va moslashtirilgan kepkalar
+            Shaxsiy uslubingizga mos, zamonaviy va sifatli kepkalarni bizning onlayn do‘konimizdan toping.
         </h1>
 
         <div class="carousel-wrapper">
