--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="product" class="buy-container">
+<!-- <div *ngIf="product" class="buy-container">
     <button class="back-btn" (click)="goBack()">← Orqaga</button>
 
     <div class="product-card">
@@ -9,4 +9,4 @@
 
         <button class="confirm-btn">Buyurtma berish</button>
     </div>
-</div>
+</div> -->
