--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,3 +50,8 @@
         </div>
     </div>
 </div>
+
+<!-- Scroll to top tugmasi -->
+<button class="scroll-to-top" *ngIf="scroll" (click)="scrollToTop()" aria-label="Scroll to top">
+    ↑
+</button>
