--- a/src/app/truckerit/truckerit.component.html
+++ b/src/app/truckerit/truckerit.component.html
@@ -42,3 +42,8 @@
         <button (click)="resetFilters()">Barcha mahsulotlarni ko'rish</button>
     </div>
 </div>
+
+<!-- Scroll to top tugmasi -->
+<button class="scroll-to-top" *ngIf="scroll" (click)="scrollToTop()" aria-label="Scroll to top">
+    ↑
+</button>
